--- a/style.css
+++ b/style.css
@@ -6,3 +6,113 @@
 	box-sizing: border-box;
 	font-family: "Poppins", sans-serif;
 }
+body {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	min-height: 100vh;
+	background: #4285f4;
+}
+.container {
+	width: 450px;
+	background: #ffffff;
+	border-radius: 10px;
+}
+
+.container h2 {
+	font-weight: 600;
+	font-size: 1.3rem;
+	padding: 1rem 1.175rem;
+	border-bottom: 1px solid #d4dbe5;
+}
+.wrapper {
+	margin: 1.25rem 1.75rem;
+}
+.wrapper .input-box {
+	position: relative;
+}
+
+.input-box input {
+	width: 100%;
+	height: 50px;
+	color: #000;
+	background: none;
+	font-size: 1.06rem;
+	font-weight: 500;
+	border-radius: 5px;
+	border: 1px solid #aaa;
+	padding: 0 2.85rem 0 1rem;
+}
+.input-box span {
+	position: absolute;
+	right: 13px;
+	line-height: 50px;
+	color: #707070;
+	cursor: pointer;
+}
+.wrapper .pass-indicator {
+	position: relative;
+	width: 100%;
+	height: 4px;
+	background: #dfdfdf;
+	margin-top: 0.75rem;
+	border-radius: 25px;
+}
+.pass-indicator::before {
+	position: absolute;
+	content: "";
+	height: 100%;
+	width: 50%;
+	background: #f1c80b;
+	border-radius: inherit;
+}
+.wrapper .pass-length {
+	margin: 1.56rem 0 1.25rem 0;
+}
+.pass-length .details {
+	display: flex;
+	justify-content: space-between;
+}
+.pass-length input {
+	width: 100%;
+	height: 5px;
+}
+
+.pass-settings .options {
+	display: flex;
+	list-style: none;
+	flex-wrap: wrap;
+	margin-top: 1rem;
+}
+
+.pass-settings .options .option {
+	display: flex;
+	align-items: center;
+	margin-bottom: 1rem;
+	width: calc(100% / 2);
+}
+
+.options .option input {
+	height: 16px;
+	width: 16px;
+	cursor: pointer;
+}
+
+.options .option label {
+	cursor: pointer;
+	padding-left: 0.63rem;
+}
+
+.wrapper .generate-button {
+	width: 100%;
+	font-size: 1.06rem;
+	padding: 0.94rem 0;
+	margin: 0.94rem 0 1.3rem 0;
+	border-radius: 5px;
+	background: #4285f4;
+	color: #ffffff;
+	border: none;
+	outline: none;
+	cursor: pointer;
+	text-transform: uppercase;
+}
