--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
 	border-radius: 5px;
 	border: 1px solid #aaa;
 	padding: 0 2.85rem 0 1rem;
+	letter-spacing: 1.4px;
 }
 .input-box span {
 	position: absolute;
@@ -65,7 +66,21 @@ body {
 	width: 50%;
 	background: #f1c80b;
 	border-radius: inherit;
+	transition: width 0.3s ease;
 }
+.pass-indicator#weak::before {
+	width: 20%;
+	background: #e64a4a;
+}
+.pass-indicator#medium::before {
+	width: 50%;
+	background: #f1c80b;
+}
+.pass-indicator#strong::before {
+	width: 100%;
+	background: #4285f4;
+}
+
 .wrapper .pass-length {
 	margin: 1.56rem 0 1.25rem 0;
 }
@@ -90,6 +105,14 @@ body {
 	align-items: center;
 	margin-bottom: 1rem;
 	width: calc(100% / 2);
+}
+
+.options .option:first-child {
+	pointer-events: none;
+}
+
+.options .option:first-child input {
+	opacity: 0.7;
 }
 
 .options .option input {
