--- a/Key-Code-Gen/style.css
+++ b/Key-Code-Gen/style.css
@@ -58,3 +58,29 @@ section {
 .arrow img {
 	width: 80px;
 }
+.overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: aliceblue;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 15px;
+}
+@media only screen and (max-width: 768px) {
+	.container {
+		flex-direction: column;
+	}
+
+	.arrow {
+		padding: 50px 0 !important;
+		transform: rotate(90deg);
+	}
+
+	.overlay {
+		text-align: center;
+	}
+}
