--- a/Photo-Gallery/style.css
+++ b/Photo-Gallery/style.css
@@ -1,13 +1,69 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;900&display=swap");
 
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: "Montserrat", sans-serif;
 }
-img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+body {
+	font-family: "Montserrat", sans-serif;
+	font-size: 10px;
+	background-color: #dbe2e9;
+}
+section {
+	min-height: 100vh;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 100px 0;
+}
+.container {
+	background-color: white;
+	width: 90%;
+	max-width: 1080px;
+	margin: 0 auto;
+	box-shadow: 0px 0px 61px 7px #5e849c40;
+	padding: 50px 20px;
+	border-radius: 10px;
+}
+
+.header {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
+
+.header h1 {
+	font-size: 3rem;
+	font-weight: 900;
+	letter-spacing: -2px;
+}
+
+form {
+	margin-top: 10px;
+	width: 80%;
+	max-width: 380px;
+}
+input {
+	border: none;
+	border-bottom: 2px solid rgba(128, 128, 128, 0.5);
+	margin-bottom: 10px;
+	font-size: 20px;
+	outline: none;
+	color: gray;
+	background-color: transparent;
+	width: 100%;
+	padding: 10px 5px;
+}
+input::placeholder {
+	opacity: 0.5;
+	color: gray;
+	font-weight: 500;
 }
