--- a/Photo-Gallery/style.css
+++ b/Photo-Gallery/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&display=swap");
 
 * {
 	margin: 0;
@@ -50,6 +50,7 @@ form {
 	margin-top: 10px;
 	width: 80%;
 	max-width: 380px;
+	position: relative;
 }
 input {
 	border: none;
@@ -66,4 +67,44 @@ input::placeholder {
 	opacity: 0.5;
 	color: gray;
 	font-weight: 500;
+}
+form ion-icon {
+	position: absolute;
+	right: 0;
+	opacity: 0.5;
+	color: gray;
+	font-size: 20px;
+}
+.gallery {
+	width: 100%;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	margin-top: 50px;
+	grid-gap: 20px;
+}
+.item {
+	width: 100%;
+	height: 300px;
+	position: relative;
+	overflow: hidden;
+	border-radius: 8px;
+	transform: 0.3s ease box-shadow;
+}
+.item:hover {
+	box-shadow: 0px 0px 20px 3px #00000042;
+}
+.item h3 {
+	width: 100%;
+	padding: 20px;
+	position: absolute;
+	bottom: -100px;
+	left: 0;
+	background-color: rgba(0, 0, 0, 0.4);
+	color: aliceblue;
+	font-size: 20px;
+	font-weight: 400;
+	transform: 0.5s ease-in-out bottom;
+}
+.item:hover h3 {
+	bottom: 0;
 }
